--- a/recipes/nginx-1.12/recipe.yml
+++ b/recipes/nginx-1.12/recipe.yml
@@ -32,9 +32,20 @@ build:
     CC=gclang ./configure
     --prefix={__INSTALL_DIR__}
     --sbin-path={__INSTALL_DIR__}/bin/nginx
+    --error-log-path=/var/log/nginx/error.log
+    --http-log-path=/var/log/nginx/access.log
+    --pid-path=/var/run/nginx.pid
+    --lock-path=/var/run/nginx.lock
+    --http-client-body-temp-path=/var/cache/nginx/client_temp
+    --http-proxy-temp-path=/var/cache/nginx/proxy_temp
+    --http-fastcgi-temp-path=/var/cache/nginx/fastcgi_temp
+    --http-uwsgi-temp-path=/var/cache/nginx/uwsgi_temp
+    --http-scgi-temp-path=/var/cache/nginx/scgi_temp
+    --user=nginx
+    --group=nginx
     --with-cc-opt="-static -Wno-sign-compare"
     --with-ld-opt="-static" --with-cpu-opt=generic --with-pcre
-    --with-mail --with-ipv6 --with-poll_module --with-select_module
+    --with-mail --with-poll_module --with-select_module
     --with-http_ssl_module
     --with-http_gzip_static_module --with-http_auth_request_module
     --with-http_random_index_module --with-http_secure_link_module
