--- a/build-base/Dockerfile
+++ b/build-base/Dockerfile
@@ -20,9 +20,14 @@ RUN ln -s /tools/bin/clang-4.0 /tools/bin/clang-cpp
 
 # Install gllvm
 RUN apk add go musl-dev
+ENV GOPATH="/usr/local/bin"
 RUN go get github.com/SRI-CSL/gllvm/cmd/gclang
 RUN go get github.com/SRI-CSL/gllvm/cmd/gclang++
 RUN go get github.com/SRI-CSL/gllvm/cmd/get-bc
+RUN mv ./usr/local/bin/bin/gclang /tools/bin
+RUN mv ./usr/local/bin/bin/gclang++ /tools/bin
+RUN mv ./usr/local/bin/bin/get-bc /tools/bin
+
 RUN apk del go musl-dev
 
 # Install tools
