--- a/recipes/expat-2.2/recipe.yml
+++ b/recipes/expat-2.2/recipe.yml
@@ -9,6 +9,7 @@ dependencies:
   musl-libc:
     - headers
     - libs
+    - rtlibs
 
 # Source
 source:
@@ -18,6 +19,7 @@ source:
 build:
   - GLLVM_CONFIGURE_ONLY=1
     CC=gclang
+    LDFLAGS="-static"
     ./configure
     --prefix={__INSTALL_DIR__}
     --enable-shared=no
