--- a/recipes/libressl-2.5/recipe.yml
+++ b/recipes/libressl-2.5/recipe.yml
@@ -19,7 +19,7 @@ source:
 
 # Build stage
 build:
-    - GLLVM_CONFIGURE_ONLY=1
+    - WLLVM_CONFIGURE_ONLY=1
         CC=gclang
         ./configure
         --prefix={__INSTALL_DIR__}
