--- a/recipes/python-2.7/recipe.yml
+++ b/recipes/python-2.7/recipe.yml
@@ -53,7 +53,7 @@ prepare:
 
 # Build stage
 build:
-  - GLLVM_CONFIGURE_ONLY=1
+  - WLLVM_CONFIGURE_ONLY=1
     CC=gclang
     LDFLAGS="-static -v -I/usr/include -L/usr/lib"
     CPPFLAGS="-I/usr/include"
