--- a/recipes/ncurses-6.0/recipe.yml
+++ b/recipes/ncurses-6.0/recipe.yml
@@ -16,7 +16,7 @@ source:
 
 # Build stage
 build:
-  - GLLVM_CONFIGURE_ONLY=1
+  - WLLVM_CONFIGURE_ONLY=1
     CC=gclang
     ./configure --prefix={__INSTALL_DIR__}
   - make LDFLAGS="-static"
