--- a/recipes/zlib-1.2/recipe.yml
+++ b/recipes/zlib-1.2/recipe.yml
@@ -16,7 +16,7 @@ source:
 
 # Build stage
 build:
-  - GLLVM_CONFIGURE_ONLY=1
+  - WLLVM_CONFIGURE_ONLY=1
     CC=gclang
     CFLAGS="-static"
     ./configure
